# deep-learning-antivirus

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/scanner-cli/: Cargo.toml
crates/scanner-cli/src/: main.rs
crates/scanner-core/: Cargo.toml
crates/scanner-core/src/: inference.rs  lib.rs  report.rs  scan.rs  virustotal.rs
crates/scanner-gui/: Cargo.toml
crates/scanner-gui/src/: app.rs  main.rs
crates/scanner-gui/src/ui/: mod.rs  scan_view.rs  sidebar.rs  theme.rs
docs/: README.md  malware-download-tutorial.md
learner/: downloader.py  export.py  features.py  learner.py  model.py  requirements.txt  test_vt_downloader.py  train.py  vt_downloader.py
models/: feature_config.json
scanner/: Cargo.toml
scanner/src/: features.rs  inference.rs  main.rs  model.rs
