[package]
name = "malware-scanner"
version = "0.1.0"
edition = "2021"
description = "ONNX-based malware detection scanner"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rayon = "1.10"
goblin = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
