[package]
name = "scanner-cli"
version = "0.1.0"
edition = "2021"
description = "CLI frontend for the ONNX malware scanner"

[[bin]]
name = "malware-scanner"
path = "src/main.rs"

[dependencies]
scanner-core = { path = "../scanner-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
