[package]
name = "scanner-core"
version = "0.1.0"
edition = "2021"
description = "Core malware scanning library — feature extraction, ONNX inference, scan orchestration"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
walkdir = "2"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
